<resources>
    <string name="app_name">后司</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_basic">基本</string>
    <string name="action_source">来源</string>
    <string name="action_settings">设置</string>
    <string name="action_feedback">打小报告</string>
    <string name="action_group_communicate">沟通</string>
    <string name="app_description">欢迎光临</string>
    <string name="update_hosts">更新 hosts</string>
    <string name="reset_hosts">重置 hosts</string>
    <string name="read_hosts">查看 hosts</string>
    <string name="read_edit_hosts">查看『biānjí』hosts</string>
    <string name="no_root">此设备没有 root，本程序无法正常工作。</string>
    <string name="no_su">没有获得 root 权限，该功能无法正常工作。</string>
    <string name="action_cancel">取消操作</string>
    <string name="do_on_update_hosts">获取 hosts 文件中…</string>
    <string name="update_hosts_failure">更新 hosts 失败</string>
    <string name="update_hosts_success">更新 hosts 成功</string>
    <string name="do_on_reset_hosts">重置 hosts 中…</string>
    <string name="reset_hosts_success">重置 hosts 成功</string>
    <string name="reset_hosts_failure">重置 hosts 失败</string>
    <string name="do_on_apply_hosts">应用 hosts 文件中…</string>
    <string name="apply_hosts_success">应用 hosts 成功</string>
    <string name="apply_hosts_failure">应用 hosts 失败</string>
    <string name="error">好像哪里出错了</string>
    <string name="network_error">网络出错</string>
    <string name="network_connect_error">网络连接出错</string>

    <string name="source_routing_built_in">内置</string>
    <string name="source_routing_diy">自定义</string>
    <string name="source_routing_file">来自文件</string>

    <string name="source_built_in_update">刷新内置源列表</string>
    <string name="source_built_in_name">内置源名称</string>
    <string name="source_built_in_name_hint">来自 xxx</string>
    <string name="source_detail">来源信息</string>
    <string name="source_download_url">来源下载地址</string>
    <string name="source_built_in_download_url_hint">https:www.google.com/hosts</string>
    <string name="source_built_in_date">更新于</string>
    <string name="source_built_in_date_hint">n/a</string>
    <string name="source_built_in_update_refresh">获取列表中</string>
    <string name="source_built_in_update_refresh_when">列表更新于</string>
    <string name="source_built_in_update_refresh_success">获取列表成功</string>
    <string name="source_built_in_update_refresh_failure">获取列表失败，请重试。</string>
    <string name="source_built_in_update_refresh_please">请先刷新列表</string>
    <string name="source_built_in_note">右上角切换来源会改变“基本”页的来源获取方式。\n点击下载地址可以复制 url 地址。\n选定来源后，返回“基本”页进行更新。</string>
    <string name="source_built_in_multi_note">点选便可以复制 url 地址。</string>
    <string name="clipboard_hint">已复制到剪切板</string>
    <string name="source_diy_note">右上角切换来源会改变“基本”页的来源获取方式。\n自定义来源地址后，返回“基本”页进行更新。</string>
    <string name="source_diy_download_url_hint">点击设置自定义来源地址</string>
    <string name="malformed_url_exception">url 格式错误</string>
    <string name="source_file_path">选择文件</string>
    <string name="source_file_path_hint">点击来选择一个文件</string>
    <string name="source_file_note">请自行确保文件是正确格式的 hosts 文件。\n选好文件后会直接应用该 hosts 文件。</string>
    <string name="select_a_file_to_apply">选择一个文件</string>
    <string name="please_install_a_file_manager">找不到文件管理器呢！</string>
    <string name="has_nothing">你点了。</string>
    <string name="support_and_help">支持和帮助</string>
    <string name="setting_check_for_update">检查更新</string>
    <string name="setting_this_app">本应用相关</string>
    <string name="setting_clean_cache">清理缓存</string>
    <string name="about_cache">缓存文件大部分是下载的 hosts 源文件。</string>
    <string name="setting_others_about">关于</string>
    <string name="action_faq">使用说明书</string>
    <string name="setting_feedback_hint">意见、建议、有可靠的 hosts 源都可以反馈给我。</string>
    <string name="setting_current_source_url">当前 hosts 源地址</string>
    <string name="clean_cache_up">清理完成</string>
    <string name="clean_cache_fail">清理失败</string>
    <string name="about_title">关于</string>
    <string name="aboutLibraries_description_text">『后司』是一个可以简单修改 hosts 的应用，本应用与其代码由 <a href="https://github.com/mcxinyu">@mcxinyu</a> 创作或维护。它是一个免费应用，使用它不收取您任何费用。其中的所有 hosts 内容均来自网络（Internet）并由其他项目组织者维护。</string>
    <string name="ope_source_library_declaration">本应用使用了包括但不仅限于以下开源库。</string>
    <string name="checking_for_update">正在检查更新</string>
    <string name="has_new_version">有新版本啦，请尽快更新！</string>
    <string name="network_is_not_available">网络不可用</string>
    <string name="need_storage">需要存储权限来下载更新应用</string>

    <string name="setting_service">通知服务</string>
    <string name="open_service">开启通知服务</string>
    <string name="service_start_time">通知时间</string>
    <string name="service_start_time_hint">10:00</string>
    <string name="about_service">开启服务后，不同手机厂家在系统资源不足时（包括安装了安全类 app 时）可能会清理或强制关闭后司应用服务，如出现该情况，请手动将后司应用服务加入白名单。</string>
    <string name="setting_alarm_repeat">重复</string>
    <string name="setting_alarm_repeat_hint">仅一次</string>
    <string name="version">Version</string>
    <string name="author_info">© 2017 mcxinyu</string>
    <string name="about_app">关于本应用</string>
    <string name="action_faq_hint">请仔细阅读说明书</string>
    <string name="setting_switch_hint">按时提醒你更新 hosts</string>
    <string name="selected_sources">已选择 %1$d 条 hosts 源</string>
    <string name="current_has_multi_sources">已设置 %1$d 条 hosts 源，点击查看</string>
    <string name="current_diy_sources">已自定义了 %1$d 条 hosts 源，点击查看</string>
    <string name="checking_for_su">检查 root 权限</string>
    <string name="account_name">anonymous</string>
    <string name="please_grant_permission">请授予相应权限</string>
    <string name="doing_debug">进入调试状态</string>
    <string name="action_edit">编辑</string>
    <string name="action_apply">应用</string>
</resources>
