<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_basic"
            android:icon="@drawable/ic_action_basic"
            android:title="@string/action_basic" />
        <item
            android:id="@+id/nav_source"
            android:icon="@drawable/ic_action_source"
            android:title="@string/action_source" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_action_setting"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/action_group_communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_action_feedback"
                android:title="@string/action_feedback" />
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_action_faq"
                android:title="@string/action_faq" />
        </menu>
    </item>

</menu>
